<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alcorp.oper.ui.customer.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_customer_activity"
        android:name="com.alcorp.oper.ui.customer.customer_activity.CustomerActivityFragment"
        android:label="@string/title_customer_activity"
        tools:layout="@layout/fragment_customer_activity" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.alcorp.oper.ui.customer.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>